[package]
name = "transfer-hook-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-transfer-hook-interface = "2.1.0"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-discriminator = "0.5.1"
spl-tlv-account-resolution = "0.11.1"
spl-token-metadata-interface = "0.7"
spl-type-length-value = "0.8"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
